--- a/template/login.html
+++ b/template/login.html
@@ -1,11 +1,26 @@
 <html>
     <head>
+        <title> Account Page </title>
     </head>
     <body>
-        <h1> Blacklist </h1>
+        <h1> Welcome to Blacklist </h1>
         <br>
-        <h2> Enter login information below.</h2>
-        <br>
-        <input 
+        <h2> Enter account info below.</h2>
+        {% if error %}
+        <p class='error'>Your login information was invalid!</p>
+        {% endif %}
+        <form method="post">
+            <label>Username</label>
+            <input name="username">
+            <br>
+            <br>
+            <label>Password</label>
+            <input name='password'>
+            <input type='submit' value='Login'>
+            <br>
+            <br>
+            <p>Don't have an account yet? Create a user account now!</p>
+            <input type='submit' value='Create'>
+        </form>             
     </body>
 </html>
