--- a/template/main.html
+++ b/template/main.html
@@ -1,6 +1,14 @@
 <html>
     <head>
-        <title> Blacklist: Enter Words </title>
+        <title> Home Page </title>
     </head>
     <body>
+        <h1> Hello nickname </h1>
+        {% if logout %}
+        
+        {% endif %}
+        <br>
+        <h2> Enter your blacklist words below</h2>
         <input> 
+    </body>
+</html>
